[tool.poetry]
name = "webscrape"
version = "0.1.0"
description = ""
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bottle = "^0.12.18"
bottle-tools = "^2019.12.22"
gunicorn = "^20.0.4"
jinja2 = "^2.11.1"
peewee = "^3.13.1"
psycopg2-binary = "^2.8.4"
arrow = "^0.15.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
